[package]
name = "rs-lisp"
version = "0.1.0"
authors = ["Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile]
[profile.release]
# or "z"
opt-level = "z"
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
panic = "abort"
codegen-units = 1



[profile.dev]
#opt-level = "z"
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
panic = "abort"